# todomvc-015

./: .dockerignore  .gitignore  .plan  Dockerfile  Makefile  README.md  fly.toml  start.sh
.github/: ci.yml
backend/: Cargo.toml
backend/src/: db.rs  lib.rs  main.rs  models.rs  repo.rs  routes.rs
backend/tests/: api_tests.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: api.rs  app.rs  lib.rs  main.rs  models.rs  router.rs
frontend/src/components/: footer.rs  header.rs  todo_item.rs  todo_list.rs
frontend/tests/: unit_tests.rs
