[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo-net = { version = "0.6", features = ["http"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Location", "HtmlElement"] }
